--- a/my-app/src/styles/style.css
+++ b/my-app/src/styles/style.css
@@ -2,8 +2,63 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header a{
+header {
+    display: flex;
+    justify-content: center; 
+    gap: 20rem;
+}
+
+header a {
     text-decoration: none;
     color: black;
+    padding-top: 2rem;
+}
+
+h1 {
+    font-size: 2rem;
+    padding-top: 2rem;
+    padding-left: 5rem;
+}
+
+.image-container {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+  
+
+.image-container img {
+    width: 500px; 
+    height: 300px; 
+    object-fit: cover; 
+}
+  
+  
+
+button {
+    background-color: black; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.button-container {
+    margin-left: 5rem;
+}
+
+.event-card {
+    width: 500px;
+}
+
+.event-card h4 {
+    white-space: normal;
+    word-break: break-word;
 }
 
